data/derived/comb/progs/unify/prog2972.ml.out
Characters 39-63:
  let stringOfList f l = "[" ^ sepConcat ("; ", (List.map (f) l))  ^ "]";;
                                         ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
